# make-n8n-converter_CrewAI

./: .gitignore  README.md  pyproject.toml
db/d1e19136-957d-4929-8fe6-444b74452238/: index_metadata.pickle
knowledge/: mapping_config.json  test_workflow_input.json
output/: workflow.json
src/make_to_nn_workflow_converter_using_json_files/: crew.py  main.py
src/make_to_nn_workflow_converter_using_json_files/config/: agents.yaml  tasks.yaml
src/make_to_nn_workflow_converter_using_json_files/tools/: __init__.py  json_validator_tool.py
