[project]
name = "make_to_nn_workflow_converter_using_json_files"
version = "0.1.0"
description = "make_to_nn_workflow_converter_using_json_files using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
make_to_nn_workflow_converter_using_json_files = "make_to_nn_workflow_converter_using_json_files.main:run"
run_crew = "make_to_nn_workflow_converter_using_json_files.main:run"
train = "make_to_nn_workflow_converter_using_json_files.main:train"
replay = "make_to_nn_workflow_converter_using_json_files.main:replay"
test = "make_to_nn_workflow_converter_using_json_files.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
